name:             merchrace
version:          0.0
synopsis:         Merchant's Race
description:
 A game of trade.
category:         Game, Games
license:          GPL
license-file:     COPYING
author:           Alan Manuel K. Gloria
maintainer:       almkglor@gmail.com
copyright:        Copyright 2013 Alan Manuel K. Gloria
build-type:       Simple
cabal-version:    >= 1.2
stability:        alpha
bug-reports:      almkglor@gmail.com
data-files: ruleset/difficulties.txt
          , ruleset/items.txt
          , ruleset/names.txt
          , ruleset/ruleset.txt
          , ruleset/settlements.txt
          , FreeSans.ttf
extra-source-files:
  README, Math/Geom/DelaunayTest.hs, runmerchrace

executable merchrace
  main-is:        Main.hs
  build-depends:  base >= 3, containers, cpphs, astar, OpenGL
               ,  GLUT, graphics-drawingcombinators
               ,  SDL, SDL-image, SDL-ttf, Noise
               ,  parsec, random
  other-modules:  Math.Geom.Delaunay
               ,  Math.Geom.QuadEdge
               ,  Math.Geom.QuadEdge.Data
               ,  Math.Geom.QuadEdge.Pure
               ,  Merch.Race.CMerch
               ,  Merch.Race.Craftsmen
               ,  Merch.Race.Data
               ,  Merch.Race.Graphics.Init
               ,  Merch.Race.Hex
               ,  Merch.Race.ItemSetPrice
               ,  Merch.Race.MapGen
               ,  Merch.Race.Market
               ,  Merch.Race.ProdCons
               ,  Merch.Race.Ruleset
               ,  Merch.Race.Ruleset.Data
               ,  Merch.Race.Ruleset.Load
               ,  Merch.Race.Ruleset.Parser
               ,  Paths_merchrace
