name:             merchrace
version:          0.0
synopsis:         Merchant's Race
description:
 A game of trade.
category:         Game, Games
license:          GPL
license-file:     COPYING
author:           Alan Manuel K. Gloria
maintainer:       almkglor@gmail.com
copyright:        Copyright 2013 Alan Manuel K. Gloria
build-type:       Simple
cabal-version:    >= 1.2
stability:        alpha
bug-reports:      almkglor@gmail.com
data-files: ruleset/difficulties.txt
          , ruleset/items.txt
          , ruleset/names.txt
          , ruleset/ruleset.txt
          , ruleset/settlementgen.txt
          , ruleset/settlements.txt
          , FreeSans.ttf
extra-source-files:
  README, Math/Geom/DelaunayTest.hs, runmerchrace,
  AUTHORS, AUTHORS.FreeSans

executable merchrace
  main-is:        Main.hs
  build-depends:  base >= 3, containers, cpphs, astar, OpenGL
               ,  GLUT, graphics-drawingcombinators
               ,  stb-image == 0.2.*, bitmap == 0.0.2
               ,  SDL, SDL-image, SDL-ttf, Noise
               ,  mtl, array
               ,  parsec, random, parallel >= 3.0.0.0
  other-modules:  Math.Geom.Delaunay
               ,  Math.Geom.QuadEdge
               ,  Math.Geom.QuadEdge.Data
               ,  Math.Geom.QuadEdge.Pure
               ,  Merch.Race.Control.Background
               ,  Merch.Race.Data
               ,  Merch.Race.Data.Serialize
               ,  Merch.Race.Data.TMap
               ,  Merch.Race.Economy
               ,  Merch.Race.Economy.CMerch
               ,  Merch.Race.Economy.Craftsmen
               ,  Merch.Race.Economy.Data
               ,  Merch.Race.Economy.ItemSetPrice
               ,  Merch.Race.Economy.ProdCons
               ,  Merch.Race.Economy.Market
               ,  Merch.Race.GameResources
               ,  Merch.Race.Hex
               ,  Merch.Race.MapGen
               ,  Merch.Race.MapGen.FilterLakes
               ,  Merch.Race.MapGen.Forest
               ,  Merch.Race.MapGen.Island
               ,  Merch.Race.MapGen.Measure
               ,  Merch.Race.MapGen.Monad
               ,  Merch.Race.MapGen.Mountain
               ,  Merch.Race.MapGen.PerlinSpread
               ,  Merch.Race.MapGen.Settlement
               ,  Merch.Race.MapGen.Substep
               ,  Merch.Race.RGX
               ,  Merch.Race.Ruleset
               ,  Merch.Race.Ruleset.Data
               ,  Merch.Race.Ruleset.Load
               ,  Merch.Race.Ruleset.Parser
               ,  Merch.Race.Top
               ,  Merch.Race.Top.MapGen
               ,  Merch.Race.UI.Button
               ,  Merch.Race.UI.Drawing
               ,  Merch.Race.UI.DrawingCombinators
               ,  Merch.Race.UI.Minimap
               ,  Paths_merchrace

  ghc-options: -O3 -threaded "-with-rtsopts=-N"
